--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -10,11 +10,18 @@
               <input type="text" class="form-control" id="fullname" aria-describedby="fullname" name="fullname">
               
             </div>
-            <div class="form-group mt-11">
+            <!-- <div class="form-group mt-11">
               <label for="role">Role</label>
               <input type="text" class="form-control" id="fullname" aria-describedby="fullname" name="role" placeholder="[USER,ADMIN]">
               
-            </div>
+            </div> -->
+            <div class="form-group">
+              <label for="exampleFormControlSelect1">Select an Option</label>
+              <select class="form-control" id="exampleFormControlSelect1" name="role">
+                  <option value="USER">STUDENT</option>
+                  <option value="ADMIN">PROFFESOR</option>
+              </select>
+           </div>
             <div class="form-group mt-7">
               <label for="email">Email address</label>
               <input type="email" class="form-control" id="email" aria-describedby="email" name="email">
